enable switch using mouse

--- a/tmux.conf
+++ b/tmux.conf
@@ -116,3 +116,12 @@ bind-key BSpace previous-window
 
 # title (default key in tmux is ',')
 bind-key A command-prompt "rename-window %%"
+
+# -----------
+# Mouse
+#----
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
