--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
-# use UTF8
-set -g utf8
-set-window-option -g utf8 on
+set-option -g default-command 'exec reattach-to-user-namespace -l zsh'
+bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"
+bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
@@ -54,20 +54,26 @@ set-option -g message-fg brightred #orange
 # ---------------------------
 # copying and pasting
 # ---------------------------
-bind-key [ copy-mode
-bind-key ] paste-buffer -s \015
-
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
-# enable mouse selection in copy mode
-setw -g mode-mouse on
+bind-key [ copy-mode
+bind-key ] paste-buffer -s \015
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # ----------------------
 # Status Bar
 # -----------------------
 set-option -g status on                # turn the status bar on
-set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 set-option -g status-position top    # position the status bar at top of screen
@@ -120,8 +126,4 @@ bind-key A command-prompt "rename-window %%"
 # -----------
 # Mouse
 #----
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-
+set -g mouse on
