--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
 set-option -g default-command 'exec reattach-to-user-namespace -l zsh'
+set-option -g allow-rename off
+
 bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"
 bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
