--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,5 @@
-set-option -g default-command 'exec reattach-to-user-namespace -l zsh'
+# disable auto rename window
 set-option -g allow-rename off
-
-bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"
-bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
@@ -26,7 +23,7 @@ set-option -g base-index 1
 setw -g pane-base-index 1
 
 # reload ~/.tmux.conf using PREFIX r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display "TMUX Reloaded!"
 
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
 bind | split-window -h
@@ -47,7 +44,7 @@ bind l select-pane -R
 # ----------------------
 # set pane colors - hilight the active pane
 set-option -g pane-border-fg colour154 #base02
-set-option -g pane-active-border-fg colour172 #base01
+set-option -g pane-active-border-fg colour179 #base01
 
 # colorize messages in the command line
 set-option -g message-bg black #base02
@@ -56,27 +53,23 @@ set-option -g message-fg brightred #orange
 # ---------------------------
 # copying and pasting
 # ---------------------------
+bind-key [ copy-mode
+bind-key ] paste-buffer -s \015
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
-bind-key [ copy-mode
-bind-key ] paste-buffer -s \015
-
-# Setup 'v' to begin selection as in Vim
-bind-key -T copy-mode-vi v send -X  begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
-
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+# enable mouse selection in copy mode
+setw -g mouse on
 
 # ----------------------
 # Status Bar
 # -----------------------
 set-option -g status on                # turn the status bar on
-set -g status-interval 5               # set update frequencey (default 15 seconds)
+set -g status-interval 15               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 set-option -g status-position top    # position the status bar at top of screen
 
@@ -100,12 +93,12 @@ set-window-option -g window-status-current-attr bright
 
 # show host name and IP address on left side of status bar
 set -g status-left-length 70
-set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+set -g status-left "#[fg=green]: #(hostname -f): #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig enp2s0| grep 'inet ' | awk '{print \"lan: \" $2}' | cut -c 6-) #(ifconfig wlp4s0 | grep 'inet ' | awk '{print \"wifi: \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 60
-set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
+set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #{cpu_bg_color} #{cpu_percentage} ::"
 
 # ---------------
 # window management
@@ -129,3 +122,17 @@ bind-key A command-prompt "rename-window %%"
 # Mouse
 #----
 set -g mouse on
+
+
+# tmux plugins
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+
+set -g @resurrect-capture-pane-contents 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
