--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -83,17 +83,17 @@ set-option -g status-fg yellow #yellow
 set-option -g status-attr dim
 
 # set window list colors - white for active and cyan for inactive
-set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-fg green #base0
 set-window-option -g window-status-bg colour236
 set-window-option -g window-status-attr dim
 
-set-window-option -g window-status-current-fg white #yellow
-set-window-option -g window-status-current-bg colour236
+set-window-option -g window-status-current-fg colour217 #yellow
+set-window-option -g window-status-current-bg colour226
 set-window-option -g window-status-current-attr bright
 
 # show host name and IP address on left side of status bar
 set -g status-left-length 70
-set -g status-left "#[fg=green]: #(hostname -f): #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig enp2s0| grep 'inet ' | awk '{print \"lan: \" $2}' | cut -c 6-) #(ifconfig wlp4s0 | grep 'inet ' | awk '{print \"wifi: \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+set -g status-left "#[fg=green]: #(hostname -f) : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig enp2s0| grep 'inet ' | awk '{print \"lan: \" $2}' | cut -c 6-) #(ifconfig wlp4s0 | grep 'inet ' | awk '{print \"wifi: \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 
 # show session name, window & pane number, date and time on right side of
 # status bar
